<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tableLayout">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/homeValue"
                            android:id="@+id/textView2"
                            android:textColor="@color/color_primary" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/textHomeValue"
                            android:layout_column="5"
                            android:inputType="numberDecimal"
                            android:textColorHint="@color/color_primary"
                            android:textColorHighlight="@color/textColor"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/downPayment"
                            android:id="@+id/textView"
                            android:layout_column="0"
                            android:textColor="@color/color_primary" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/textDownPayment"
                            android:layout_column="5"
                            android:inputType="numberDecimal"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interestRate"
                            android:id="@+id/textView3"
                            android:layout_column="0"
                            android:textColor="@color/color_primary" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/textInterestRate"
                            android:layout_column="5"
                            android:inputType="numberDecimal"
                            android:textColor="#000000" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textAnswer"
                            android:layout_column="5" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms"
                            android:id="@+id/textView4"
                            android:layout_column="0"
                            android:layout_span="2"
                            android:textColor="@color/color_primary" />

                        <Spinner
                            android:id="@+id/spinnerTerm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/term_arrays"
                            android:prompt="@string/term_prompt"
                            android:textColor="#000000"
                            android:layout_column="5"
                            android:theme="@style/ActivityTheme" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/propertyTaxRate"
                            android:id="@+id/textView5"
                            android:layout_column="0"
                            android:textColor="@color/color_primary" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:id="@+id/textPropertyTaxRate"
                            android:layout_column="5"
                            android:inputType="numberDecimal"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payments"
                            android:id="@+id/textView6"
                            android:textColor="#d4d4d4"
                            android:textSize="34dp"
                            android:textColorHighlight="#d4d4d4" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalTaxPaid"
                            android:id="@+id/textViewTotalTaxPaid"
                            android:layout_column="0"
                            android:textColor="@color/color_primary" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textTotalTaxPaid"
                            android:layout_column="5"
                            android:numeric="decimal"
                            android:inputType="numberDecimal"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/totalInterestPaid"
                            android:id="@+id/textViewInterestPaid"
                            android:layout_column="0"
                            android:textColor="@color/color_primary" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textTotalInterestPaid"
                            android:layout_column="5"
                            android:numeric="decimal"
                            android:inputType="numberDecimal"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monthlyPayment"
                            android:id="@+id/textViewMonthlyPayment"
                            android:layout_column="0"
                            android:textColor="@color/color_primary" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textTotalMonthlyPayment"
                            android:layout_column="5"
                            android:numeric="decimal"
                            android:inputType="numberDecimal"
                            android:textColor="#000000" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payOffDate"
                            android:id="@+id/textViewPayOffDate"
                            android:layout_column="0"
                            android:textColor="@color/color_primary" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textPayOffDate"
                            android:layout_column="5"
                            android:textColor="#000000" />
                    </TableRow>

                </TableLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:id="@+id/buttonCalculate"
                    android:layout_column="5"
                    android:onClick="onButtonClicked"
                    android:textColor="#FFFFFF"
                    android:background="@color/color_primary"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/tableLayout"
                    android:layout_alignEnd="@+id/tableLayout" />

</RelativeLayout>
